<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#D6D7D7">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/welcome_to_tic_tac_toe"
        android:textColor="#15100d"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:scaleType="fitCenter"
        android:src="@drawable/applogo"/>
    
    <TextView
        android:id="@+id/Mode"
        style="@style/primaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivAppLogo"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_game_mode"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PvP"
        style="@style/buttonPvP"
        android:layout_below="@+id/Mode"
        android:layout_marginTop="15dp"
        android:text="@string/pvp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/PvC"
        style="@style/buttonPvC"
        android:text="@string/PvC"
        android:layout_below="@+id/PvP"
        android:layout_marginTop="15dp"/>



</RelativeLayout>