<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseSide"
    android:background="#D6D7D7">

    <ImageButton
        android:id="@+id/BackSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/ChooseSideText"
        style="@style/primaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/BackSide"
        android:textSize="20sp"
        android:textColor="#15100d"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:padding="18dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
            android:id="@+id/SideCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ChooseSideText"
            android:layout_marginTop="80dp"
            android:weightSum="2"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageCircle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:src="@drawable/circle"/>

        <ImageView
            android:id="@+id/imageCross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cross"
            android:layout_weight="1"
            android:layout_below="@+id/ChooseSideText"
            />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/Sides"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">


        <RadioButton
            android:id="@+id/circle"
            style="@style/CrossCircle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/circle"
            android:gravity="center"
            android:layout_marginTop="320dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/blue"
            />


        <RadioButton
            android:id="@+id/cross"
            style="@style/CrossCircle"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cross"
            android:gravity="center"
            android:textColor="@color/red"
            android:layoutDirection="rtl"
            android:layout_marginTop="320dp"
            android:layout_marginStart="10dp"/>

</RadioGroup>

    <TextView
        android:id="@+id/ChoosedSide"
        style="@style/primaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:text="@string/you_choosed"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/NextSide"
        style="@style/buttonPvP"
        android:layout_marginTop="50dp"
        android:layout_below="@id/ChoosedSide"
        android:text="@string/next"/>


</RelativeLayout>