<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseSideAI"
    android:background="#D6D7D7">

    <ImageButton
        android:id="@+id/GetBackSide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:minWidth="60dp"
        android:minHeight="60dp"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>


    <TextView
        android:id="@+id/ChooseSideText2"
        style="@style/primaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/GetBackSide2"
        android:textSize="20sp"
        android:textColor="#15100d"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:padding="18dp"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/SideCont2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ChooseSideText2"
        android:layout_marginTop="80dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageCircle2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:src="@drawable/circle"/>




    </LinearLayout>

    <RadioGroup
        android:id="@+id/Sides2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">


        <RadioButton
            android:id="@+id/circle2"
            style="@style/CrossCircle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/circle"
            android:gravity="center"
            android:layout_marginTop="320dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/blue"
            />




    </RadioGroup>

    <TextView
        android:id="@+id/ChoosedSide2"
        style="@style/primaryTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:text="@string/you_choosed"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/NextSide2"
        style="@style/buttonPvP"
        android:layout_marginTop="50dp"
        android:layout_below="@id/ChoosedSide2"
        android:text="@string/next"/>


</RelativeLayout>